@@ -15,8 +15,8 @@
         <setting id="hidecinema" type="bool" label="32571" default="false" />
         <setting type="lsep" label="32319" />
         <setting id="movie.widget" type="enum" label="32320" lvalues="32302|32321|32322|32323|32324" default="1" />
-        <setting id="tv.widget.alt" type="enum" label="32325" lvalues="32302|32326|32327|32328" default="2" visible="!eq(-9,)+eq(-8,1)" />
-        <setting id="tv.widget" type="enum" label="32325" lvalues="32302|32326" default="1" visible="eq(-10,)|eq(-9,0)" />
+        <setting id="tv.widget.alt" type="enum" label="32325" lvalues="32302|32326|32327|32328" default="2" visible="!eq(-11,)" />  
+        <setting id="tv.widget" type="enum" label="32325" lvalues="32302|32326" default="1" visible="eq(-12,)" />
         <setting id="lists.widget" type="enum" label="32329" lvalues="32302|32301" default="1" />
     </category>
     <category label="32330">
@@ -51,6 +51,7 @@
         <setting id="provider.dizigold" type="bool" label="DIZIGOLD" default="true" />
         <setting id="provider.dltube" type="bool" label="DLTUBE" default="true" />
         <setting id="provider.einthusan" type="bool" label="EINTHUSAN" default="true" />
+        <setting id="provider.flixtor" type="bool" label="FLIXTOR" default="true" />
         <setting id="provider.genvideo" type="bool" label="GENVIDEO" default="true" />
         <setting id="provider.gogoanime" type="bool" label="GOGOANIME" default="true" />
         <setting id="provider.gostream" type="bool" label="GOSTREAM" default="true" />
